--- a/index.html
+++ b/index.html
@@ -1,15 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
-	</head>
-	<body>
-		<p>
-			My name is Jordan and I own this domain. Contact me by email at
-			<a href="mailto:jordangreer1997@yahoo.com">jordangreer1997@yahoo.com</a>
-		</p>
-	</body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Red's Portfolio</title>
+    <link rel="shortcut icon" href="./favicon-32x32.png">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="./css/styles.css">
+</head>
+<body>
+<header class="page-header">
+    <!-- logo img -->
+    <img src="./img/logo.png" alt="logo" class="page-header__item">
+    <nav class="main-navigation page-header__item">
+        <ul role="menubar" class="navigation-list">
+          <li role="presentation">
+            <a href="index.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Home</a>
+          </li>
+          <li role="presentation">
+            <a href="about.html" role="menuitem" class="navigation-list__item">About</a>
+          </li>
+          <li role="presentation">
+            <a href="work.html" role="menuitem" class="navigation-list__item">Work</a>
+          </li>
+          <li role="presentation">
+            <a href="contact.html" role="menuitem" class="navigation-list__item">Contact</a>
+          </li>
+          <li role="presentation">
+            <button class="theme-toggle" aria-label="Toggle dark mode">🌙</button>
+          </li>
+        </ul>
+    </nav>
+</header>
+<main>
+    <div class="profile">
+        <!-- Portrait image here -->
+        <img src="./img/joker.png" class="profile__portrait" alt="Profile picture">
+        <h1>Hello World</h1>
+        <p>
+            My name is Jordan. I am a <span>web</span> developer from the US.
+        </p>
+        <a href="work.html">Check out some of my code</a>
+    </div>
+</main>
+<footer class="page-footer">
+  <p>Find me on</p>
+  <div class="social-media-icons">
+      <!-- Github logo -->
+      <a href="https://github.com/redonthehead123" target="_blank">
+          <img src="img/github_icon.svg" alt="Github logo">
+      </a>
+      <!-- Steam logo -->
+      <a href="https://steamcommunity.com/profiles/76561198171704934/" target="_blank">
+          <img src="img/steam_icon.svg" alt="Steam logo">
+      </a>
+      <!-- Discord logo -->
+      <a href="https://discordapp.com/users/222989501591584769" target="_blank">
+          <img src="img/discord_icon.svg" alt="Discord logo">
+      </a>
+  </div>
+</footer>
+<script src="js/theme-toggle.js"></script>
+<!-- <script src="js/tota11y.min.js"></script> -->
+</body>
 </html>
