--- a/work.html
+++ b/work.html
@@ -60,11 +60,15 @@
             <a href="https://github.com/redonthehead123/meet_app" target="_blank">GitHub Repo</a>
         </div>
         <div class="grid__item">
-            <h2>Project 3</h2>
+            <h2>Battle Buddy Outdoors</h2>
+            <img src="./img/battle-buddy-outdoors.png" alt="Battle Buddy Outdoors Screenshot" style="width: 100%; margin-bottom: 10px;">
             <p>
-                This is a description to test the layout of this page.
+                A full-featured outdoor gear and adventure company website offering product sales, guided programs, 
+                and customer reviews. Built with PHP and MySQL, featuring products for sale to fund the cause.
+                Includes responsive design, contact forms, and dynamic content rendering.
             </p>
-            <a href="#">View Project Here</a>
+            <p><strong>Technologies:</strong> PHP, MySQL, HTML, CSS, JavaScript, AJAX, JSON</p>
+            <a href="https://battlebuddyoutdoors.com" target="_blank">View Live Site</a>
         </div>
         <div class="grid__item">
             <h2>Project 4</h2>
